--- a/src/Tests/Gate.Hosts.AspNet.Tests/packages.config
+++ b/src/Tests/Gate.Hosts.AspNet.Tests/packages.config
@@ -3,7 +3,7 @@
   <package id="Castle.Core" version="2.5.2" />
   <package id="FakeItEasy" version="1.7.4257.42" />
   <package id="NUnit" version="2.5.10.11092" />
-  <package id="Owin" version="0.12-ctp4" />
+  <package id="Owin" version="0.12" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
   <package id="xunit" version="1.9.1" />
 </packages>
