--- a/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
+++ b/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
@@ -49,9 +49,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Firefly.0.4\lib\net40\Firefly.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.12.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.0.12-ctp4\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.0.12\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
