--- a/src/Hosts/Gate.Hosts.Firefly/packages.config
+++ b/src/Hosts/Gate.Hosts.Firefly/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Firefly" version="0.4" />
-  <package id="Owin" version="0.12-ctp4" />
+  <package id="Owin" version="0.12" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
