--- a/src/Deploy/Gate.Adapters.Nancy.nuspec
+++ b/src/Deploy/Gate.Adapters.Nancy.nuspec
@@ -11,7 +11,7 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin" version="[0.8-ctp1]"/>
+      <dependency id="Owin" version="0.12"/>
       <dependency id="Nancy" version="0.11.0"/>
     </dependencies>
   </metadata>
