--- a/src/Deploy/Gate.Hosts.AspNet.nuspec
+++ b/src/Deploy/Gate.Hosts.AspNet.nuspec
@@ -12,7 +12,7 @@
     <tags></tags>
     <dependencies>
       <dependency id="Gate.Builder" version="[$version$]"/>
-      <dependency id="Owin" version="[0.8-ctp1]"/>
+      <dependency id="Owin" version="0.12"/>
       <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0"/>
     </dependencies>
   </metadata>
