--- a/src/Main/Gate.Builder/Gate.Builder.csproj
+++ b/src/Main/Gate.Builder/Gate.Builder.csproj
@@ -56,7 +56,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Gate.Builder.nuspec" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" />
