--- a/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.csproj
+++ b/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.csproj
@@ -37,8 +37,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Nancy.0.11.0\lib\net40\Nancy.dll</HintPath>
     </Reference>
-    <Reference Include="Owin">
-      <HintPath>..\..\..\packages\Owin.0.12\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin, Version=0.14.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Owin.0.14\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin.Startup">
+      <HintPath>..\..\..\packages\Owin.Startup.0.2\lib\net40\Owin.Startup.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
