--- a/src/Adapters/Gate.Adapters.Nancy/packages.config
+++ b/src/Adapters/Gate.Adapters.Nancy/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="0.11.0" />
-  <package id="Owin" version="0.12" targetFramework="net40" />
+  <package id="Owin" version="0.14" targetFramework="net40" />
+  <package id="Owin.Startup" version="0.2" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
