--- a/src/Samples/Sample.HelloWorld/packages.config
+++ b/src/Samples/Sample.HelloWorld/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Owin" version="0.12" targetFramework="net40" />
+  <package id="Owin" version="0.14" targetFramework="net40" />
+  <package id="Owin.Startup" version="0.2" targetFramework="net40" />
 </packages>
