--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Nancy" version="0.9.0" />
   <package id="Nancy.Viewengines.Spark" version="0.9.0" />
-  <package id="Owin" version="0.12" targetFramework="net40" />
+  <package id="Owin" version="0.14" targetFramework="net40" />
+  <package id="Owin.Startup" version="0.2" targetFramework="net40" />
   <package id="Spark" version="1.5.1" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
