--- a/src/Samples/Sample.Nancy/Web.config
+++ b/src/Samples/Sample.Nancy/Web.config
@@ -1,13 +1,17 @@
-﻿<?xml version="1.0"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-	<system.web>
-		<compilation debug="true" targetFramework="4.0" />
-	</system.web>
-
-	<system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-	</system.webServer>
-
+  <system.web>
+    <compilation debug="true" targetFramework="4.0" />
+  </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+  </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Spark" publicKeyToken="7f8549eed921a12c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.7.0.0" newVersion="1.7.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
