--- a/src/Deploy/Gate.Hosts.AspNet.nuspec
+++ b/src/Deploy/Gate.Hosts.AspNet.nuspec
@@ -11,8 +11,8 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Gate.Builder" version="[$version$]"/>
-      <dependency id="Owin" version="0.12"/>
+      <dependency id="Owin" version="0.14"/>
+      <dependency id="Owin.Startup" version="0.3"/>
       <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0"/>
     </dependencies>
   </metadata>
