--- a/src/Main/Gate/Gate.csproj
+++ b/src/Main/Gate/Gate.csproj
@@ -37,8 +37,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Owin.0.14\lib\net40\Owin.dll</HintPath>
     </Reference>
-    <Reference Include="Owin.Startup">
-      <HintPath>..\..\..\packages\Owin.Startup.0.2\lib\net40\Owin.Startup.dll</HintPath>
+    <Reference Include="Owin.Startup, Version=0.3.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Owin.Startup.0.3\lib\net40\Owin.Startup.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -67,7 +68,9 @@
     <None Include="Gate.Sources.nuspec">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Gate.nuspec" />
+    <None Include="Gate.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
