--- a/src/Main/Gate/Gate.nuspec
+++ b/src/Main/Gate/Gate.nuspec
@@ -11,7 +11,8 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin" version="0.12"/>
+      <dependency id="Owin" version="0.14"/>
+      <dependency id="Owin.Startup" version="0.3"/>
     </dependencies>
   </metadata>
   <files>
