--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Nancy" version="0.9.0" />
-  <package id="Nancy.Viewengines.Spark" version="0.9.0" />
+  <package id="Nancy" version="0.11.0" targetFramework="net40" />
+  <package id="Nancy.Viewengines.Spark" version="0.11.0" targetFramework="net40" />
   <package id="Owin" version="0.14" targetFramework="net40" />
-  <package id="Owin.Startup" version="0.2" targetFramework="net40" />
-  <package id="Spark" version="1.5.1" />
+  <package id="Owin.Startup" version="0.3" targetFramework="net40" />
+  <package id="Spark" version="1.7.2.0" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
