--- a/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
+++ b/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
@@ -41,6 +41,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Owin.0.14\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="Owin.Builder">
+      <HintPath>..\..\..\packages\Owin.Builder.0.3\lib\net40\Owin.Builder.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin.Loader">
+      <HintPath>..\..\..\packages\Owin.Loader.0.3\lib\net40\Owin.Loader.dll</HintPath>
+    </Reference>
     <Reference Include="Owin.Startup, Version=0.3.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Owin.Startup.0.3\lib\net40\Owin.Startup.dll</HintPath>
@@ -59,10 +65,6 @@
     </Compile>
     <Compile Include="AppHandler.cs" />
     <Compile Include="AppSingleton.cs" />
-    <Compile Include="App_Packages\Owin.Builder.Sources.0.3\AppBuilder.cs" />
-    <Compile Include="App_Packages\Owin.Builder.Sources.0.3\Utils\Conversions.cs" />
-    <Compile Include="App_Packages\Owin.Loader.Sources.0.3\DefaultLoader.cs" />
-    <Compile Include="App_Packages\Owin.Loader.Sources.0.3\NullLoader.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpersExtensions.cs" />
     <Compile Include="OwinHandler.cs" />
