--- a/src/Main/Gate.Middleware/Gate.Middleware.csproj
+++ b/src/Main/Gate.Middleware/Gate.Middleware.csproj
@@ -32,10 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Owin, Version=0.14.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.0.14\lib\net40\Owin.dll</HintPath>
-    </Reference>
     <Reference Include="Owin.Startup, Version=0.3.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Owin.Startup.0.3\lib\net40\Owin.Startup.dll</HintPath>
@@ -54,9 +50,9 @@
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="NotFound.cs" />
     <Compile Include="OwinConstants.cs" />
-    <Compile Include="PassiveValidator.cs" />
-    <Compile Include="RequestLogger.cs" />
-    <Compile Include="RequestTracer.cs" />
+    <None Include="PassiveValidator.cs" />
+    <None Include="RequestLogger.cs" />
+    <None Include="RequestTracer.cs" />
     <Compile Include="StaticFiles\FileBody.cs" />
     <Compile Include="StaticFiles\FileServer.cs" />
     <Compile Include="MethodOverride.cs" />
@@ -64,10 +60,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Static.cs" />
     <Compile Include="StaticFiles\TextBody.cs" />
-    <Compile Include="ContentLength.cs" />
-    <Compile Include="Chunked.cs" />
-    <Compile Include="Cascade.cs" />
-    <Compile Include="ContentType.cs" />
+    <None Include="ContentLength.cs" />
+    <None Include="Chunked.cs" />
+    <None Include="Cascade.cs" />
+    <None Include="ContentType.cs" />
     <Compile Include="ShowExceptions.cs" />
     <Compile Include="ShowExceptions.View.cs">
       <AutoGen>True</AutoGen>
@@ -78,9 +74,9 @@
     <Compile Include="Utils\RangeHeader.cs" />
     <Compile Include="Utils\StreamWrapper.cs" />
     <Compile Include="WebSockets\BinaryStream.cs" />
-    <Compile Include="WebSockets\OpaqueToWebSocket.cs" />
+    <None Include="WebSockets\OpaqueToWebSocket.cs" />
     <Compile Include="WebSockets\WebSocketLayer.cs" />
-    <Compile Include="WebSockets\WebSocketToBinaryStream.cs" />
+    <None Include="WebSockets\WebSocketToBinaryStream.cs" />
     <Compile Include="Wilson.cs" />
   </ItemGroup>
   <ItemGroup>
