--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestTests.cs" />
     <Compile Include="ResponseTests.cs" />
-    <Compile Include="TestClientTests.cs" />
+    <None Include="TestClientTests.cs" />
     <Compile Include="UrlMapperTests.cs" />
   </ItemGroup>
   <ItemGroup>
