--- a/src/Samples/Samples.ViaRouting/Web.config
+++ b/src/Samples/Samples.ViaRouting/Web.config
@@ -1,16 +1,22 @@
-﻿<?xml version="1.0"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
   <appSettings>
-    <add key="Gate.AspNet.SetCurrentDirectory" value="Enabled"/>
-    <add key="Gate.AspNet.HandleAllRequests" value="Disabled"/>
+    <add key="owin:SetCurrentDirectory" value="true" />
+    <add key="owin:HandleAllRequests" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Owin.Startup" publicKeyToken="f585506a2da1fef4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.3.0.0" newVersion="0.3.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
