--- a/src/Samples/Sample.Nancy/Web.config
+++ b/src/Samples/Sample.Nancy/Web.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="owin:SetCurrentDirectory" value="true" />
+    <add key="owin:HandleAllRequests" value="true" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
