--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Owin" version="0.5" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Nancy" version="0.11.0" targetFramework="net40" />
   <package id="Nancy.Viewengines.Spark" version="0.11.0" targetFramework="net40" />
-  <package id="Owin" version="0.14" targetFramework="net40" />
-  <package id="Owin.Startup" version="0.3" targetFramework="net40" />
+  <package id="Owin.Startup" version="0.4" targetFramework="net40" />
   <package id="Spark" version="1.7.2.0" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
