--- a/src/Samples/Samples.ViaRouting/packages.config
+++ b/src/Samples/Samples.ViaRouting/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Owin" version="0.14" targetFramework="net40" />
-  <package id="Owin.Startup" version="0.3" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Owin" version="0.5" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Owin.Startup" version="0.4" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
