--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -79,8 +79,9 @@
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpersExtensions.cs" />
     <Compile Include="ContentLengthTests.cs" />
-    <None Include="PassiveValidatorTests.cs" />
-    <None Include="RequestLoggerTests.cs" />
+    <Compile Include="PassiveValidatorTests.cs" />
+    <Compile Include="RequestTracerTests.cs" />
+    <Compile Include="RequestLoggerTests.cs" />
     <Compile Include="StaticFiles\FileServerTests.cs" />
     <Compile Include="MethodOverrideTests.cs" />
     <Compile Include="StaticFiles\RangeHeaderTests.cs" />
