--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -87,7 +87,7 @@
     <Compile Include="StaticFiles\RangeHeaderTests.cs" />
     <Compile Include="StaticTests.cs" />
     <Compile Include="ChunkedTests.cs" />
-    <None Include="CascadeTests.cs" />
+    <Compile Include="CascadeTests.cs" />
     <Compile Include="ContentTypeTests.cs" />
     <Compile Include="ShowExceptionsTests.cs" />
   </ItemGroup>
