Adding builder.Properties validation to PassiveValidator
Also adding Microsoft.AspNet.Owin to Sample.HelloWorld to support F5 running

--- a/src/Samples/Sample.HelloWorld/Web.config
+++ b/src/Samples/Sample.HelloWorld/Web.config
@@ -6,6 +6,9 @@
   -->
 
 <configuration>
+  <appSettings>
+    <add key="owin:HandleAllRequests" value="true"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
