Updating katana references

--- a/src/Samples/Sample.Nancy/Sample.Nancy.csproj
+++ b/src/Samples/Sample.Nancy/Sample.Nancy.csproj
@@ -45,8 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AspNet.Owin">
-      <HintPath>..\..\..\packages\Microsoft.AspNet.Owin.0.5\lib\Microsoft.AspNet.Owin.dll</HintPath>
+    <Reference Include="Microsoft.AspNet.Owin, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Microsoft.AspNet.Owin.0.8\lib\Microsoft.AspNet.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
