--- a/src/Samples/Sample.Nancy/Web.config
+++ b/src/Samples/Sample.Nancy/Web.config
@@ -1,21 +1,21 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="owin:SetCurrentDirectory" value="true"/>
-    <add key="owin:HandleAllRequests" value="true"/>
+    <add key="owin:SetCurrentDirectory" value="true" />
+    <add key="owin:HandleAllRequests" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <compilation debug="true" targetFramework="4.0" />
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Spark" publicKeyToken="7f8549eed921a12c" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.7.0.0" newVersion="1.7.0.0"/>
+        <assemblyIdentity name="Spark" publicKeyToken="7f8549eed921a12c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.7.0.0" newVersion="1.7.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
