--- a/src/Samples/Sample.HelloWorld/Sample.HelloWorld.csproj
+++ b/src/Samples/Sample.HelloWorld/Sample.HelloWorld.csproj
@@ -67,8 +67,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AspNet.Owin">
-      <HintPath>..\..\..\packages\Microsoft.AspNet.Owin.0.7\lib\Microsoft.AspNet.Owin.dll</HintPath>
+    <Reference Include="Microsoft.AspNet.Owin, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Microsoft.AspNet.Owin.0.8\lib\Microsoft.AspNet.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
