--- a/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.csproj
+++ b/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.csproj
@@ -37,9 +37,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Nancy.0.12.1\lib\net40\Nancy.dll</HintPath>
     </Reference>
-    <Reference Include="Owin.Startup, Version=0.4.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.Startup.0.4\lib\net40\Owin.Startup.dll</HintPath>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin.Extensions">
+      <HintPath>..\..\..\packages\Owin.Extensions.0.6.3\lib\net40\Owin.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
