--- a/src/Samples/Samples.ViaRouting/packages.config
+++ b/src/Samples/Samples.ViaRouting/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Owin" version="0.8" targetFramework="net40" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0-rc1-121121" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Owin.Startup" version="0.4" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net40" />
+  <package id="Owin.Extensions" version="0.6.3" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
