Update TaskHelpers dependency.

--- a/src/Hosts/Gate.Hosts.Firefly/packages.config
+++ b/src/Hosts/Gate.Hosts.Firefly/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Firefly" version="0.4" />
   <package id="Owin" version="0.14" targetFramework="net40" />
-  <package id="TaskHelpers.Sources" version="0.1" />
+  <package id="TaskHelpers.Sources" version="0.2" targetFramework="net40" />
 </packages>
