--- a/src/Main/Gate.Middleware/packages.config
+++ b/src/Main/Gate.Middleware/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="Owin.Extensions" version="0.6.3" targetFramework="net40" />
-  <package id="TaskHelpers.Sources" version="0.1" />
+  <package id="TaskHelpers.Sources" version="0.2" targetFramework="net40" />
 </packages>
