--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -7,5 +7,5 @@
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="Owin.Extensions" version="0.6.3" targetFramework="net40" />
   <package id="Spark" version="1.7.2.0" targetFramework="net40" />
-  <package id="TaskHelpers.Sources" version="0.1" />
+  <package id="TaskHelpers.Sources" version="0.2" targetFramework="net40" />
 </packages>
