--- a/src/Samples/Samples.ViaRouting/packages.config
+++ b/src/Samples/Samples.ViaRouting/packages.config
@@ -4,5 +4,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="Owin.Extensions" version="0.6.3" targetFramework="net40" />
-  <package id="TaskHelpers.Sources" version="0.1" />
+  <package id="TaskHelpers.Sources" version="0.2" targetFramework="net40" />
 </packages>
