--- a/src/Tests/Gate.Middleware.Tests/packages.config
+++ b/src/Tests/Gate.Middleware.Tests/packages.config
@@ -4,6 +4,6 @@
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="Owin.Builder" version="0.6.3" targetFramework="net40" />
   <package id="Owin.Extensions" version="0.6.3" targetFramework="net40" />
-  <package id="TaskHelpers.Sources" version="0.1" />
+  <package id="TaskHelpers.Sources" version="0.2" targetFramework="net40" />
   <package id="xunit" version="1.9.1" />
 </packages>
