--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0-rc1-121121" targetFramework="net40" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="0.12-alpha2" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Nancy" version="0.12.1" targetFramework="net40" />
   <package id="Nancy.Viewengines.Spark" version="0.12.1" targetFramework="net40" />
