Refactoring a few things
Removing Kayak adapter
Avoiding extension methods to fix sources pkgs

--- a/src/Main/Gate/Gate.csproj
+++ b/src/Main/Gate/Gate.csproj
@@ -50,7 +50,7 @@
     <Compile Include="AppBuilderInlineExtensions.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.2\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.2\TaskHelpersExtensions.cs" />
-    <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="BuilderProperties.cs" />
     <Compile Include="Headers.cs" />
     <Compile Include="Mapping\MapBuilder.cs" />
     <Compile Include="Mapping\UrlMapper.cs" />
