--- a/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.nuspec
+++ b/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.nuspec
@@ -11,8 +11,8 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin.Startup" version="0.4"/>
-      <dependency id="Nancy" version="0.11.0"/>
+      <dependency id="Owin" version="1.0"/>
+      <dependency id="Nancy" version="0.14.1"/>
     </dependencies>
   </metadata>
   <files>
